--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
             - "8000:80"
         volumes:
             - /var/www
-            - /docker/nginx/conf.d:/etc/nginx/conf.d/
+            - ./docker/nginx/conf.d:/etc/nginx/conf.d/
         networks:
             - app-network
 
