--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     # Service Laravel
     app:
         build:
-            dockerfile: deploy/Dockerfile
+            dockerfile: Dockerfile
         container_name: laravel_app
         restart: unless-stopped
         working_dir: /var/www/
