--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,8 @@ services:
         ports:
             - "8000:80"
         volumes:
-            - /var/www
-            - ./docker/nginx/conf.d:/etc/nginx/conf.d/
+            - ./:/var/www
+            - ./docker/prod/nginx/conf.d:/etc/nginx/conf.d/
         networks:
             - app-network
 
